adjust the height in projects card to display content correctly on mobile

--- a/src/styles/Projects.module.css
+++ b/src/styles/Projects.module.css
@@ -50,7 +50,7 @@
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     max-width: 80%;
-    height: 470px; /* Set consistent height */
+    min-height: 470px; /* Set consistent height */
     margin: 0 auto;
     display: flex;
     flex-direction: column; /* Make it column-based */
@@ -158,7 +158,7 @@
     .card {
         width: 95%;
         /* Reduce card width */
-        height: 470px;
+        min-height: 470px;
         margin: 0 auto;
         padding: 15px;
     }
